      \code{xz} and PCRE have been removed, so system versions are
      required (see the \sQuote{R Installation and Administration}
      manual).
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item Support for very old versions of \command{valgrind}
      (e.g. 3.3.0) has been removed.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item C-level \code{asChar(x)} is fixed for when \code{x} is not a
      vector, and it returns \dQuote{TRUE}/\dQuote{FALSE} instead of
      \dQuote{T}/\dQuote{F} for logical vectors.

      \item \code{.colSums()} etc (with an initial dot) first argument
      name \code{x} matches \code{colSums()} such that error messages
      are correct.

      \item A \code{coef()} method for class \code{"maov"} has been
      added to allow \code{vcov()} to work with multivariate
      results. (\PR{16380})
    }
  }
}

\section{\Rlogo CHANGES IN R 3.2.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{cmdscale()} gets new option \code{list.} for increased
      flexibility when a list should be returned.

      \item \command{configure} now supports \code{texinfo} version 6.0,
      which (unlike the change from 4.x to 5.0) is a minor update.
      (Wish of \PR{16456}.)

      \item (Windows only) \code{setInternet2(TRUE)} is now the default,
      so \samp{https://} URLs should be readable.  The command line
      option \command{--internet2} and the environment variable
      \env{R_WIN_INTERNET2} are now ignored.

      \item (Non-Windows only:) \code{download.file()} with default
      \code{method = "auto"} now chooses \code{"libcurl"} if that is
      available and a \samp{https://} or \samp{ftps://} url is used.

      \item \code{chooseCRANmirror()} now offers HTTPS mirrors in
      preference to HTTP mirrors.

      \item \code{capture.output()} gets optional arguments \code{type}
      and \code{split} to pass to \code{sink()}, and hence can be used